--- a/static/static_dirs/css/base.css
+++ b/static/static_dirs/css/base.css
@@ -147,6 +147,7 @@ hr {
   background-color: white;
   color: black;
   border-radius: 5px;
+  margin-top: 20px;
 }
 
 .founders .jumbotron {
@@ -329,6 +330,10 @@ h1 {
   margin: 5px;
 }
 
+.homepage h1 {
+  text-align: center;
+  font-size: 35px;
+}
 
 .panel-default>.panel-heading {
     color: #FFF;
