Making a bunch of different updates and suggestions. Cleaning up code. Adding a bunch of tests and a new class for coding.

--- a/src/templates/questions/question_detail.html
+++ b/src/templates/questions/question_detail.html
@@ -41,7 +41,7 @@
         {% endif %}
         {% if question.passage %}
             <div class="passage">
-                <p>{{ question.passage }}</p>
+                <p>{{ question.passage|safe }}</p>
             </div>
             <hr>
         {% endif %}
